[gd_scene load_steps=10 format=2]

[ext_resource path="res://sprites/car2.png" type="Texture" id=1]
[ext_resource path="res://scripts/car.gd" type="Script" id=2]
[ext_resource path="res://sprites/car_light.png" type="Texture" id=3]
[ext_resource path="res://sprites/car1.png" type="Texture" id=4]
[ext_resource path="res://sprites/car3.png" type="Texture" id=5]
[ext_resource path="res://sprites/car4.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=25]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "front",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 6 ) ],
"loop": true,
"name": "on",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 15.5, 15.5 )

[sub_resource type="SpriteFrames" id=27]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="car" type="Area2D"]
script = ExtResource( 2 )

[node name="sprite" type="AnimatedSprite" parent="."]
position = Vector2( -1.90735e-06, 0 )
scale = Vector2( 0.19668, 0.19668 )
frames = SubResource( 25 )
speed_scale = 3.0
playing = true

[node name="collider" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 0.5 )
shape = SubResource( 24 )

[node name="light" type="AnimatedSprite" parent="."]
visible = false
modulate = Color( 100, 100, 100, 1 )
position = Vector2( 50, 1 )
scale = Vector2( 0.208333, 0.180556 )
frames = SubResource( 27 )

[node name="light2" type="AnimatedSprite" parent="."]
visible = false
modulate = Color( 100, 100, 100, 1 )
position = Vector2( 17.6682, 0.417608 )
scale = Vector2( -0.303618, 0.216311 )
frames = SubResource( 27 )

[node name="light3" type="AnimatedSprite" parent="."]
visible = false
modulate = Color( 100, 100, 100, 1 )
position = Vector2( -23, 0 )
scale = Vector2( 0.314, 0.216 )
frames = SubResource( 27 )

[connection signal="body_entered" from="." to="." method="_on_car_body_entered"]
